[package]
name = "servervox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
corevox = { path = "../corevox" }
framebuffer = "0.3.1"
rppal = "0.13.1"
